# persona

./: .gitattributes  .gitignore  CORE_ANALYSIS_REPORT.md  CORE_QUICK_REFERENCE.md  Cargo.toml  Makefile  README.md  TODO.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  conventional-commits.yml
agents/ssh-agent/: Cargo.toml  README.md  TESTING.md  agent-policy.example.toml
agents/ssh-agent/src/: lib.rs  main.rs  policy.rs  transport.rs
agents/ssh-agent/tests/: e2e_test.rs
browser/: README.md
browser/chromium-extension/: README.md  manifest.json  package.json  tsconfig.json
browser/chromium-extension/public/: manifest.json  popup.html
browser/chromium-extension/src/: autofillDefaults.ts  background.ts  bridge.ts  content.ts  domainPolicy.ts  formScanner.ts  nativeBridge.ts  popup.ts  settings.ts
browser/safari-extension/: Package.swift  README.md
browser/safari-extension/Shared/: manifest.json
browser/safari-extension/Sources/PersonaSafariExtensionApp/: App.swift
browser/safari-extension/Sources/PersonaSafariExtensionExtension/: SafariWebExtensionHandler.swift
browser/wasm-crypto/: .gitignore  Cargo.toml  README.md
browser/wasm-crypto/src/: crypto.rs  lib.rs  utils.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: add.rs  auto_lock.rs  bridge.rs  credential.rs  edit.rs  export.rs  import.rs  init.rs  list.rs  migrate.rs  mod.rs  password.rs  remove.rs  show.rs  ssh.rs  switch.rs  totp.rs  tui.rs  wallet.rs
cli/src/config/: mod.rs
cli/src/utils/: core_ext.rs  file_crypto.rs  mod.rs  progress.rs
cli/tests/: integration_test.rs
core/: Cargo.toml
core/examples/: README.md
core/migrations/: 001_initial.sql  002_add_salt_field.sql  003_workspace_v2.sql  004_add_wrapped_item_key.sql  005_attachments.sql  006_change_history.sql  007_add_session_id.sql  008_auto_lock_policies.sql  009_crypto_wallets.sql
core/src/: lib.rs  logging.rs  password.rs  service.rs
core/src/auth/: authentication.rs  auto_lock.rs  auto_lock_cached.rs  auto_lock_dashboard.rs  biometric.rs  mod.rs  permissions.rs  remote.rs  security_strategies.rs  session.rs
core/src/crypto/: address_generator.rs  encryption.rs  hashing.rs  key_hierarchy.rs  keys.rs  mod.rs  transaction_signing.rs  wallet_crypto.rs  wallet_encryption.rs  wallet_import_export.rs
core/src/models/: attachment.rs  audit_log.rs  auto_lock_policy.rs  change_history.rs  credential.rs  identity.rs  mod.rs  wallet.rs  workspace.rs
core/src/storage/: attachment.rs  auto_lock_policy_repository.rs  blob.rs  change_history.rs  database.rs  filesystem.rs  mod.rs  repository.rs  user_auth.rs  wallet_repository.rs
core/tests/: biometric_tests.rs  integration_test.rs  integration_tests.rs  remote_auth_tests.rs
desktop/: .eslintrc.cjs  README.md  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  index.css  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs  types.rs
desktop/src/components/: CreateCredentialModal.tsx  CredentialList.tsx  ErrorHandling.tsx  IdentitySwitcher.tsx  SettingsModal.tsx  SshAgentPanel.tsx  UnlockScreen.tsx  WalletPanel.tsx
desktop/src/hooks/: usePersonaService.ts
desktop/src/stores/: appStore.ts
desktop/src/tests/: integration.test.ts
desktop/src/types/: env.d.ts  index.ts
desktop/src/utils/: api.ts  clipboard.ts  helpers.ts
docs/: BIOMETRIC_HOOKS.md  BRIDGE_PROTOCOL.md  CLIENT_COMMUNICATION_ARCHITECTURE.md  CONTRIBUTING.md  FEATURE_GAP_ANALYSIS.md  KEY_HIERARCHY.md  LOCAL_SERVICE.md  MONOREPO.md  NON_INTERACTIVE_MODE.md  ONEPASSWORD_FEATURES.md  README.md  REMOTE_AUTH.md  ROADMAP.md  SSH_AGENT_FEATURES.md  SUPPLY_CHAIN_SECURITY.md  book.toml
docs/book/: 404.html  index.html  print.html  searchindex.js  toc.html  toc.js
docs/book/analysis/: scenarios.html  security-requirements.html  technical-requirements.html  user-requirements.html
docs/book/api/: authentication.html  identity.html  security.html  sync.html
docs/book/appendix/: index.html
docs/book/contributing/: code-review.html  how-to-contribute.html  release-process.html
docs/book/design/: api.html  architecture.html  data-model.html  security.html  ui-ux.html
docs/book/development/: coding-standards.html  deployment.html  setup.html  structure.html  testing.html
docs/book/overview/: architecture.html  features.html  introduction.html  security.html
docs/book/theme/: custom.css
docs/book/user/: desktop.html  faq.html  mobile.html  quick-start.html  troubleshooting.html
docs/branding/: README.md  brand-guidelines.md  color-palette.md
docs/src/: README.md  SUMMARY.md
docs/src/analysis/: scenarios.md  security-requirements.md  technical-requirements.md  user-requirements.md
docs/src/api/: authentication.md  identity.md  security.md  sync.md
docs/src/design/: architecture.md  security.md  ui-ux.md
docs/src/development/: structure.md  testing.md
docs/src/overview/: architecture.md  introduction.md  security.md
docs/theme/: custom.js
mobile/: pubspec.yaml
mobile/rust/: Cargo.toml
mobile/rust/src/: lib.rs
scripts/: build-docs.sh
scripts/native-messaging/: install-native-host.ps1  install-native-host.sh
server/: Cargo.toml
server/src/: main.rs
website/: .umirc.ts  package.json  tsconfig.json
website/src/: global.less
website/src/layouts/: index.less  index.tsx
website/src/pages/: docs.less  docs.tsx  download.less  download.tsx  features.less  features.tsx  index.less  index.tsx  pricing.less  pricing.tsx
