[workspace]
resolver = "2"
members = [
    "core",
    "server", 
    "mobile/rust",
    "cli",
    "agents/ssh-agent"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Persona Team"]
license = "MIT"
repository = "https://github.com/your-username/persona"
description = "Master your digital identity. Switch freely with one click."

[workspace.dependencies]
# 加密相关
ring = "0.17"
argon2 = "0.5"
aes-gcm = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
zeroize = "1.7"
flate2 = "1.0"

# 数据库
rusqlite = { version = "0.30", features = ["bundled"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Web框架 (服务器端)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# 配置管理
config = "0.14"

# 测试
mockall = "0.12"

# 其他依赖
async-trait = "0.1"
dirs = "5.0"
hex = "0.4"
tempfile = "3.8"
atty = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
