[package]
name = "persona-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Optional sync server for Persona (zero-knowledge architecture)"

[dependencies]
# 核心库
persona-core = { path = "../core" }

# Web框架
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# 数据库
sqlx.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 异步运行时
tokio.workspace = true

# 日志
tracing.workspace = true
tracing-subscriber.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 时间处理
chrono.workspace = true

# UUID
uuid.workspace = true

# 配置管理
config.workspace = true

# 环境变量
dotenvy = "0.15"

[dev-dependencies]
mockall.workspace = true