[package]
name = "persona-wasm-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Persona Contributors"]
description = "WebAssembly cryptography module for Persona browser extension"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Cryptography
argon2 = { version = "0.5", features = ["std"] }
ed25519-dalek = "2.1"
aes-gcm = "0.10"
rand = { version = "0.8", features = ["wasm-bindgen"] }
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["std"] }
hmac = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # 优化体积
lto = true          # Link Time Optimization
codegen-units = 1   # 更好的优化
panic = "abort"     # 减小体积
strip = true        # 移除调试符号
