[package]
name = "persona-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mobile bindings for Persona"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
persona-core = { path = "../../core" }

# 序列化
serde.workspace = true
serde_json.workspace = true

# 异步运行时
tokio.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# FFI
libc = "0.2"

[features]
default = []